# jsonui-test-runner

./: .gitignore  CLAUDE.md  README.md
drivers/ios/: Package.swift  README.md
drivers/ios/Sources/JsonUITestRunner/: JsonUITestRunner.swift
drivers/ios/Sources/JsonUITestRunner/Actions/: ActionExecutor.swift
drivers/ios/Sources/JsonUITestRunner/Assertions/: AssertionExecutor.swift
drivers/ios/Sources/JsonUITestRunner/Models/: TestModels.swift
drivers/ios/Sources/JsonUITestRunner/Runner/: TestLoader.swift  TestRunner.swift
drivers/ios/Tests/JsonUITestRunnerTests/: JsonUITestRunnerTests.swift
examples/flows/: login-to-profile.test.json
examples/screens/: Login.test.json
schemas/: actions.schema.json  description.schema.json  flow-test.schema.json  screen-test.schema.json
test_tools/: README.md  jsonui-test  pyproject.toml
test_tools/installer/: README.md  bootstrap.sh  install_jsonui_test.sh
test_tools/jsonui_test_cli/: cli.py  generator.py  schema.py  validator.py
test_tools/jsonui_test_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
test_tools/jsonui_test_cli/adapter/: __init__.py  generator.py
test_tools/jsonui_test_cli/html/: __init__.py  document.py  erd.py  flow.py  index.py  schema.py  screen.py  sidebar.py  styles.py  swagger.py
test_tools/jsonui_test_cli/markdown/: __init__.py  generator.py
test_tools/jsonui_test_cli/mermaid/: __init__.py  generator.py
test_tools/jsonui_test_cli/validation/: __init__.py  description.py  flow.py  models.py  screen.py  step.py  validator.py
test_tools/tests/: __init__.py  test_cli.py  test_generator.py  test_validator.py
